--- a/work3/report/3-methods/methods.tex
+++ b/work3/report/3-methods/methods.tex
@@ -1,7 +1,7 @@
 \section{Methods}
 \label{sec:methods}
 
-This section details our experimental methodology, including algorithm implementations, parameter configurations, and statistical analysis approaches. We present our methods in four main parts:
+This section provides an overview of the clustering algorithms used in our analysis, detailing their mechanisms, key parameters, and parameter variations. The methods include K-Means (Section~\ref{subsec:methods-kmeans}), Improved K-Means (Section~\ref{subsec:methods-improved-kmeans}), Fuzzy C-Means (Section~\ref{subsec:methods-fuzzy-cmeans}), OPTICS (Section~\ref{subsec:methods-optics}), and Spectral Clustering (Section~\ref{subsec:methods-spectral-clustering}).
 
 \input{3-methods/1-kmeans}
 \input{3-methods/2-improved-kmeans}
