--- a/work3/report/report.tex
+++ b/work3/report/report.tex
@@ -6,6 +6,9 @@
 \usepackage{hyperref}
 \usepackage{graphicx}
 \usepackage{longtable}
+\usepackage{amsmath}
+\usepackage{tabularx}
+
 \bibliographystyle{plain}
 
 \title{TITLE}
