update notes and TODO for work3

--- a/work3/notes/2024-11-26.md
+++ b/work3/notes/2024-11-26.md
@@ -9,4 +9,9 @@
 * should we specifically use accuracy, precision and recall? Is f-measure sufficient?
 * we already measure purity, ari, f-measure, DBI and runtime. Do we need to include additional metrics?
    * do you grade more generously if we include additional metrics, such as silhouette score?
+        * we should choose 4 clever metrics, may or may not include the examples
+        * purity is simple, and not a good choice, remove
+        * Calinsky Harabasz
+        * Krzanowski
 * should we include synthetic dataset results for method and metric validation?
+    * don't include synthetic
