initial results structure created for report

--- a/work3/report/4-results-and-analysis/results-and-analysis.tex
+++ b/work3/report/4-results-and-analysis/results-and-analysis.tex
@@ -1,4 +1,12 @@
 \section{Results and Analysis}
 \label{sec:results-and-analysis}
 
-\input{4-results-and-analysis/1-results}
+\input{4-results-and-analysis/1-kmeans-results}
+
+\input{4-results-and-analysis/2-improved-kmeans-results.tex}
+
+\input{4-results-and-analysis/3-fuzzy-cmeans-results}
+
+\input{4-results-and-analysis/4-optics-results}
+
+\input{4-results-and-analysis/5-spectral-clustering-results}
