added summary section to results

--- a/work3/report/4-results-and-analysis/results-and-analysis.tex
+++ b/work3/report/4-results-and-analysis/results-and-analysis.tex
@@ -10,3 +10,5 @@
 \input{4-results-and-analysis/4-optics-results}
 
 \input{4-results-and-analysis/5-spectral-clustering-results}
+
+\input{4-results-and-analysis/6-summary}
