--- a/work3/report/4-results-and-analysis/2-improved-kmeans-results.tex
+++ b/work3/report/4-results-and-analysis/2-improved-kmeans-results.tex
@@ -1,14 +1,14 @@
 \subsection{Improved K-Means}
 \label{subsec:improvedkmeansresults}
 
-% Introduce section regarding the results of the improved K-Means algorithm
 
-\subsubsection*{Global K-Means}
+
+\subsubsection{Global K-Means}
 \label{subsec:globalkmeansresults}
 
 % Add plots here when ready
 
-\subsubsection*{G-Means}
+\subsubsection{G-Means}
 \label{subsec:gmeansresults}
 
 % Add plots here when ready
