--- a/work3/report/4-results-and-analysis/2-improved-kmeans-results.tex
+++ b/work3/report/4-results-and-analysis/2-improved-kmeans-results.tex
@@ -1,15 +1,18 @@
 \subsection{Improved K-Means}
 \label{subsec:improvedkmeansresults}
 
-
+This section provides an overview of the results obtained from the improved K-Means algorithms implemented, Global K-Means and G-Means.
 
 \subsubsection{Global K-Means}
 \label{subsec:globalkmeansresults}
 
-% Add plots here when ready
+% Add plots
+% Talk about the performance metrics results
+
 
 \subsubsection{G-Means}
 \label{subsec:gmeansresults}
 
-% Add plots here when ready
+% Add plots
+% Talk about the performance metrics results
 
