--- a/work3/report/references.bib
+++ b/work3/report/references.bib
@@ -124,3 +124,39 @@ title={An Euclidean Distance Based on Tensor Product Graph Diffusion Related Att
   year={2018},
   publisher={Elsevier}
 }
+
+@article{1999-optics,
+author = {Ankerst, Mihael and Breunig, Markus M. and Kriegel, Hans-Peter and Sander, J\"{o}rg},
+title = {OPTICS: ordering points to identify the clustering structure},
+year = {1999},
+issue_date = {June 1999},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {28},
+number = {2},
+issn = {0163-5808},
+url = {https://doi.org/10.1145/304181.304187},
+doi = {10.1145/304181.304187},
+abstract = {Cluster analysis is a primary method for database mining. It is either used as a stand-alone tool to get insight into the distribution of a data set, e.g. to focus further analysis and data processing, or as a preprocessing step for other algorithms operating on the detected clusters. Almost all of the well-known clustering algorithms require input parameters which are hard to determine but have a significant influence on the clustering result. Furthermore, for many real-data sets there does not even exist a global parameter setting for which the result of the clustering algorithm describes the intrinsic clustering structure accurately. We introduce a new algorithm for the purpose of cluster analysis which does not produce a clustering of a data set explicitly; but instead creates an augmented ordering of the database representing its density-based clustering structure. This cluster-ordering contains information which is equivalent to the density-based clusterings corresponding to a broad range of parameter settings. It is a versatile basis for both automatic and interactive cluster analysis. We show how to automatically and efficiently extract not only 'traditional' clustering information (e.g. representative points, arbitrary shaped clusters), but also the intrinsic clustering structure. For medium sized data sets, the cluster-ordering can be represented graphically and for very large data sets, we introduce an appropriate visualization technique. Both are suitable for interactive exploration of the intrinsic clustering structure offering additional insights into the distribution and correlation of the data.},
+journal = {SIGMOD Rec.},
+month = jun,
+pages = {49–60},
+numpages = {12},
+keywords = {cluster analysis, database mining, visualization}
+}
+
+@article{2018-spectral,
+    author = {Damle, Anil and Minden, Victor and Ying, Lexing},
+    title = {Simple, direct and efficient multi-way spectral clustering},
+    journal = {Information and Inference: A Journal of the IMA},
+    volume = {8},
+    number = {1},
+    pages = {181-203},
+    year = {2018},
+    month = {06},
+    abstract = {We present a new algorithm for spectral clustering based on a column-pivoted QR factorization that may be directly used for cluster assignment or to provide an initial guess for k-means. Our algorithm is simple to implement, direct and requires no initial guess. Furthermore, it scales linearly in the number of nodes of the graph and a randomized variant provides significant computational gains. Provided the subspace spanned by the eigenvectors used for clustering contains a basis that resembles the set of indicator vectors on the clusters, we prove that both our deterministic and randomized algorithms recover a basis close to the indicators in Frobenius norm. We also experimentally demonstrate that the performance of our algorithm tracks recent information theoretic bounds for exact recovery in the stochastic block model. Finally, we explore the performance of our algorithm when applied to a real-world graph.},
+    issn = {2049-8772},
+    doi = {10.1093/imaiai/iay008},
+    url = {https://doi.org/10.1093/imaiai/iay008},
+    eprint = {https://academic.oup.com/imaiai/article-pdf/8/1/181/28053156/iay008.pdf},
+}
