--- a/work3/report/report.tex
+++ b/work3/report/report.tex
@@ -11,7 +11,7 @@
 
 \bibliographystyle{plain}
 
-\title{TITLE}
+\title{Implementation, Evaluation, and Comparison of K-Means\\and Other Clustering Algorithms}
 \author{Carlos Jiménez, Sheena Lang, Zachary Parent, and Kacper Poniatowski}
 \date{\today}
 
