--- a/work3/report/references.bib
+++ b/work3/report/references.bib
@@ -160,3 +160,47 @@ keywords = {cluster analysis, database mining, visualization}
     url = {https://doi.org/10.1093/imaiai/iay008},
     eprint = {https://academic.oup.com/imaiai/article-pdf/8/1/181/28053156/iay008.pdf},
 }
+
+
+@article{gfcm,
+  title={Generalized fuzzy c-means clustering algorithm with improved fuzzy partitions},
+  author={Zhu, Lin and Chung, Fu-Lai and Wang, Shitong},
+  journal={IEEE Transactions on Systems, Man, and Cybernetics, Part B (Cybernetics)},
+  volume={39},
+  number={3},
+  pages={578--591},
+  year={2009},
+  publisher={IEEE}
+}
+
+@article{gsFCM,
+  title={Generalization rules for the suppressed fuzzy c-means clustering algorithm},
+  author={Szil{\'a}gyi, L{\'a}szl{\'o} and Szil{\'a}gyi, S{\'a}ndor M},
+  journal={Neurocomputing},
+  volume={139},
+  pages={298--309},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@article{suppresedFCM,
+  title={Suppressed fuzzy c-means clustering algorithm},
+  author={Fan, Jiu-Lun and Zhen, Wen-Zhi and Xie, Wei-Xin},
+  journal={Pattern Recognition Letters},
+  volume={24},
+  number={9-10},
+  pages={1607--1612},
+  year={2003},
+  publisher={Elsevier}
+}
+
+@article{fcm,
+  title={FCM: The fuzzy c-means clustering algorithm},
+  author={Bezdek, James C and Ehrlich, Robert and Full, William},
+  journal={Computers \& geosciences},
+  volume={10},
+  number={2-3},
+  pages={191--203},
+  year={1984},
+  publisher={Elsevier}
+}
